<?xml version="1.0"?>
<package>
  <name>image_pub</name>
  <version>0.1.0</version>
  <description>Image publisher from mp4</description>
  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>
  <author email="ladrians@gmail.com">Luciano Silveira</author> 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>opencv</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>opencv</run_depend>

  <export>
  </export>
</package>